crates/lmpdf-sys/tests/ui/missing_semicolon.rs
lmpdf_sys_macros::pdfium_ffi! {
    fn Foo()
}

fn main() {}
